--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "title": "React Native Character Input",
   "version": "1.0.0",
   "description": "TODO",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/HrutvikPatel/react-native-character-input.git",
-    "baseUrl": "https://github.com/HrutvikPatel/react-native-character-input"
+    "url": "https://github.com/HrutvikPatel/react-native-character-input.git"
   },
   "keywords": [
     "react-native"
@@ -27,7 +26,11 @@
     "react-native": ">=0.59.0-rc.0 <1.0.x"
   },
   "devDependencies": {
+    "@types/react": "^16.9.2",
+    "@types/react-native": "^0.60.15",
     "react": "^16.8.3",
-    "react-native": "^0.59.10"
+    "react-native": "^0.59.10",
+    "react-native-typescript-transformer": "^1.2.13",
+    "typescript": "^3.6.3"
   }
 }
