--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "description": "TODO",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "repository": {
     "type": "git",
@@ -23,14 +24,32 @@
   "readmeFilename": "README.md",
   "peerDependencies": {
     "react": "^16.8.1",
-    "react-native": ">=0.59.0-rc.0 <1.0.x"
+    "react-native": ">=0.59.0-rc.0 <1.0.x",
+    "react-native-elements": "^1.2.1",
+    "react-native-vector-icons": "^6.6.0"
   },
   "devDependencies": {
     "@types/react": "^16.9.2",
     "@types/react-native": "^0.60.15",
+    "@typescript-eslint/eslint-plugin": "^2.3.0",
+    "@typescript-eslint/parser": "^2.3.0",
+    "eslint": "^6.4.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-import-resolver-typescript": "^1.1.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-json": "^1.4.0",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.14.3",
+    "prettier": "^1.18.2",
     "react": "^16.8.3",
     "react-native": "^0.59.10",
     "react-native-typescript-transformer": "^1.2.13",
     "typescript": "^3.6.3"
+  },
+  "dependencies": {
+    "react-native-elements": "^1.2.1",
+    "react-native-vector-icons": "^6.6.0"
   }
 }
