--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "react-native-character-input",
   "title": "React Native Character Input",
-  "version": "1.0.0",
-  "description": "TODO",
+  "version": "1.0.1",
+  "description": "Interactive character inputs that allow custom masking",
   "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -13,7 +13,18 @@
     "url": "https://github.com/HrutvikPatel/react-native-character-input.git"
   },
   "keywords": [
-    "react-native"
+    "react-native",
+    "reactnative",
+    "component",
+    "typscript",
+    "javascript",
+    "react-native-module",
+    "react-native-component",
+    "input",
+    "textfield",
+    "textInput",
+    "reactjs",
+    "bootstrap"
   ],
   "author": {
     "name": "Hrutvik",
